fixed word spacing for username and password

--- a/frontend/containers/LoginContainerStyles.module.scss
+++ b/frontend/containers/LoginContainerStyles.module.scss
@@ -27,6 +27,20 @@
   border: none;
 }
 
+.username .password {
+  padding: 0;
+  height: 13px;
+  font-size: 16px;
+}
+
+.password {
+  padding: 0;
+  padding-top: 7px;
+  height: 13px;
+  font-size: 16px;
+}
+
+
 .loginButton {
   margin-top: 25px;
   margin-bottom: 10px;
